# azure-data-platform-databricks-runtime

./: .env-dist  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.os  Dockerfile.python  Makefile  PACKAGE.md  README.md  requirements-dev.txt  requirements-infra.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: integration_tests.yml  publish_docker_image.yml
dbt-spark/: setup.py
docs/user/: DATAPIPELINE.md  Databricks_Data_Ingestion_Pipeline.md  databricks_data_ingestion_pipeline.md
ingenii_databricks/: dashboard_utils.py  dbt_utils.py  enums.py  orchestration.py  pipeline.py  pipeline_utils.py  pre_process.py  schema_yml.py  table_utils.py  validation.py
ingenii_databricks/orchestration/: __init__.py  base.py  connection.py  data_provider.py  data_provider_table.py  import_file.py
integration_tests/data/: 0file.csv  1file.csv
integration_tests/dbt/: dbt_project.yml  profiles.yml
integration_tests/infrastructure/: Pulumi.databricks-runtime-testing.prod.yml  Pulumi.yml  __main__.py  base.py  current_version.py  (+6 more)
notebooks/: data_pipeline.py  data_provider.py  engineering_dashboard.py  example_configs  querying_tables.py  visualisation_dashboard.py
pre_process/: PREPROCESS.md  functions.py  root.py
tests/: test_enums.py  test_import_entry.py  test_propagate_source.py  test_table_utils.py
unit_tests/: test__mocks.py  test_import_entry.py  test_import_entry_initialisation.py  test_import_entry_names_and_paths.py  test_propagate_source.py  test_table_utils.py  test_validation.py
(+25 files in other folders)
