[metadata]
name = ingenii_databricks
url = TBA
author = Greg Atkins
author_email = greg@ingenii.dev
description = Facilitate data engineering using a combination of Databricks and DBT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: Restricted
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include =
    ingenii_databricks
    ingenii_databricks.orchestration

[options.package_data]